clusters/cl01tl/manifests/garage-operator/HTTPRoute-garage-ps10rp-c-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-ps10rp-c-ui
  namespace: tailscale-operator
  labels:
    app.kubernetes.io/name: garage-ps10rp-c-ui
    app.kubernetes.io/instance: garage-operator
    app.kubernetes.io/part-of: garage-operator
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "c-ui.s3.alexlebens.net"
  rules:
    - backendRefs:
        - name: garage-ui-ps10rp
          port: 443
